force-app/main/default/objects/PSFileAttachDef__c/PSFileAttachDef__c.object-meta.xml
<CustomObject>
    <label>PSFileAttachDef</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>File ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSFileAttachDef</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>