force-app/main/default/objects/PSFileAttachDef__c/fields/Allowed_Extensions__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Extensions__c</fullName>
    <label>Allowed Extensions</label>
    <length>50</length>
    <type>Text</type>
</CustomField>