force-app/main/default/objects/PSFileAttachDef__c/fields/Community_Access__c.field-meta.xml
<CustomField>
    <fullName>Community_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Access</label>
    <type>Checkbox</type>
</CustomField>