force-app/main/default/objects/PSFileAttachDef__c/fields/Filename__c.field-meta.xml
<CustomField>
    <fullName>Filename__c</fullName>
    <label>Filename</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>