force-app/main/default/objects/PSFileAttachDef__c/fields/Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field__c</fullName>
    <label>Filter Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>