force-app/main/default/objects/PSFileAttachDef__c/fields/Filter_Values__c.field-meta.xml
<CustomField>
    <fullName>Filter_Values__c</fullName>
    <label>Filter Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>