force-app/main/default/objects/PSFileAttachDef__c/fields/Keep_Filename__c.field-meta.xml
<CustomField>
    <fullName>Keep_Filename__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep Filename</label>
    <type>Checkbox</type>
</CustomField>