force-app/main/default/objects/PSFileAttachDef__c/fields/Online_Template__c.field-meta.xml
<CustomField>
    <fullName>Online_Template__c</fullName>
    <label>Online Template</label>
    <type>Url</type>
</CustomField>