force-app/main/default/objects/PSFileAttachDef__c/fields/PSFileAttachTemplate__c.field-meta.xml
<CustomField>
    <fullName>PSFileAttachTemplate__c</fullName>
    <label>Template</label>
    <referenceTo>PSFileAttachTemplate__c</referenceTo>
    <relationshipLabel>PSFileAttachDef</relationshipLabel>
    <relationshipName>PSFileAttachDef</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>