force-app/main/default/objects/PSFileAttachDef__c/fields/Upload_Field__c.field-meta.xml
<CustomField>
    <fullName>Upload_Field__c</fullName>
    <inlineHelpText>The API name of Boolean field on object that will be set to True when file has been uploaded</inlineHelpText>
    <label>Upload Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>